--- a/config/proc/drush.yml
+++ b/config/proc/drush.yml
@@ -42,7 +42,7 @@ task:
             call: var
             args:
               key: alter_arg
-              value: uli --uri (({origin}.appsetting.service.www.host))
+              value: uli --uri https://(({origin}.appsetting.service.www.host))
     -
       call: var
       args:
