Changes from drush.yml

--- a/config/proc/drush.yml
+++ b/config/proc/drush.yml
@@ -49,10 +49,10 @@ task:
         key: args
         value: (({}.var.alter_arg)) (({}.args._))
 
-    - call: removeDuplicateFromString
-      args:
-        data: (({}.var.args))
-        pipe: args
+    #- call: removeDuplicateFromString
+    #  args:
+    #    data: (({}.var.args))
+    #    pipe: args
     -
       call: exec
       args:
