Changes from drupal-default stack

--- a/config/proc/trace.access.yml
+++ b/config/proc/trace.access.yml
@@ -1,9 +1,7 @@
-### trace.nginx.access
-
-```yml
 help: Muestra mensajes de depuración de Nginx
 example:
 - (({}.tmp.proc.sig))
+
 task:
   require:
     config:
@@ -13,8 +11,6 @@ task:
     -
       call: exec
       args:
-        cmd: docker exec -it (({origin}.appsetting.tag))-www tail -f /var/log/nginx/access.log
+        cmd: docker exec -it (({origin}.appsetting.tag))-www tail -f /var/log/(({origin}.appsetting.service.www.webserver))/access.log
         out: true
     - { event: 'origin windup' }
-```
-[```config/proc/trace.nginx.access.yml```](../config/proc/trace.nginx.access.yml)
