--- a/config/proc/trace.error.yml
+++ b/config/proc/trace.error.yml
@@ -10,5 +10,5 @@ task:
     -
       call: exec
       args:
-        cmd: docker exec -it (({origin}.appsetting.tag))-www tail -f /var/log/nginx/error.log
+        cmd: docker exec -it (({origin}.appsetting.tag))-www tail -f /var/log/(({origin}.appsetting.service.www.webserver))/error.log
         out: true
