--- a/file/stack/drupal-default/.dm/templates/webserver.nginx.default.conf
+++ b/file/stack/drupal-default/.dm/templates/webserver.nginx.default.conf
@@ -3,10 +3,8 @@
 #
 server {
 
-    # server_name seidor.dev;
-
     listen 0.0.0.0:80;
-    root /var/www/html/web;
+    root /var/www/html((appsetting.service.www.webserver_docroot));
     index index.php index.html index.htm;
     port_in_redirect off;
 
