--- a/file/stack/drupal-default/.dm/docker-compose.yml
+++ b/file/stack/drupal-default/.dm/docker-compose.yml
@@ -1,3 +1,4 @@
+version: "3.8"
 networks:
   dm_proxy:
     external: true 
@@ -78,6 +79,11 @@ services:
         consistency: cached
         source: ${APPSETTING_SERVICE_WWW_SOURCE}
         target: /var/www/html
+        type: bind
+      - 
+        consistency: cached
+        source: ./custom
+        target: /root/custom
         type: bind
     healthcheck:
       interval: 1s
