Changes from drupal stack

--- a/config/@/test/test.drupal.local.BACKUP.yml
+++ b/config/@/test/test.drupal.local.BACKUP.yml
@@ -1,4 +1,5 @@
-# REF: https://github.com/madsnorgaard/drupal11_docker_composer_drush/blob/main/docker-compose.yml
+# REFS:
+# https://github.com/madsnorgaard/drupal11_docker_composer_drush/blob/main/docker-compose.yml
 
 _pwd: (({}.user.homedir))/project/((._key))
 
@@ -7,7 +8,8 @@ appsetting:
   tag: ((._tag))
   key: ((._key))
   root: ((._pwd))
-  stack: drupal
+  #stack: drupal-11
+  stack: drupal-default
   wildcard_host: ((._key))
   path:
     backup_db: ((_pwd))/private/db
@@ -20,47 +22,35 @@ appsetting:
       pass: ((._tag))_pass
       conf:
         db-export:
-          excluded-tables: []
-          #  - "batch" 
-          #  - "cache_" 
-          #  - "flood" 
-          #  - "queue" 
-          #  - "search_dataset" 
-          #  - "search_index" 
-          #  - "search_total" 
-          #  - "semaphore" 
-          #  - "sessions" 
-          #  - "watchdog"
+          excluded-tables:
+            - "batch" 
+            - "cache_" 
+            - "flood" 
+            - "queue" 
+            - "search_dataset" 
+            - "search_index" 
+            - "search_total" 
+            - "semaphore" 
+            - "sessions" 
+            - "watchdog"
     pma:
       base_image: phpmyadmin/phpmyadmin
       host: ((_env))-pma.((appsetting.wildcard_host))
     www:
       base_image: ubuntu:24.04
       host: ((_env)).((appsetting.wildcard_host))
-      # Establece el directorio desde el cual se monta el volumen. Ej: [ ../ | ../drupal | ../web ]
-      source: "../((appsetting.stack))"
-      # Establece el tipo de servidor web. Ej: [ nginx | apache2 ]
-      webserver: nginx 
-      # Establece el nombre del directorio al que accede las peticiones del servidor web. 
-      # Deja en blanco para no añadir ninguna ruta relativa y que el directorio raíz sea /var/www/html.
-      # Ej: [ /web ]
-      webserver_docroot: "/web"
       php:
         release: 8.3 # [ 8.1 | 8.3 ]
-      composer:
-        release: 2
       drupal:
         release: ^11 # [ ^10 | ^11 ]
-        target: ((appsetting.stack))
-        error_level: verbose
-        file_system:
-          config_path: ../config
-          public_path: sites/default/files
-          private_path: ../private
-          temp_path: /tmp
-  env_dockerfile:
-    - APPSETTING_DEV=true
-    
+      root: drupal
+      file_system:
+        config_path: sites/default/config
+        public_path: sites/default/files
+        private_path: ../private
+        temp_path: /tmp
+      error_level: verbose
+
 hook:
   call: {}
   event:
@@ -76,13 +66,12 @@ hook:
               - require drupal/devel
               - require drupal/devel_kint_extras
               - require drupal/environment_indicator
-              - require drupal/gin_toolbar
-              - require drupal/gin
               - require drupal/metatag
               - require drupal/masquerade:^2.0@RC
               - require drupal/paragraphs
               - require drupal/pathauto
               - require drupal/redirect
+              # - require drupal/redis
               - require drupal/twig_tweak
               - require drupal/viewsreference:^2.0@beta
               - require drupal/ckeditor5_plugin_pack
@@ -102,6 +91,7 @@ hook:
               - pm:enable paragraphs
               - pm:enable pathauto
               - pm:enable redirect
+              # - pm:enable redis
               - pm:enable twig_tweak
               - pm:enable viewsreference
               - pm:enable ckeditor5_plugin_pack
@@ -109,12 +99,6 @@ hook:
               - config-set system.performance js.preprocess 1
               - user:create admin.editor --password admin
               - user:role:add content_editor admin.editor
-              # - pm:enable navigation
-              # - pm:enable navigation_top_bar
-              - theme:enable gin
-              - pm:enable gin_toolbar
-              - config-set system.theme admin gin
-              - config-set gin.settings enable_darkmode 0
-              - config-set gin.settings classic_toolbar horizontal
-              - cset locale.settings translation.import_enabled false -y
+              - pm:enable navigation
+              - pm:enable navigation_top_bar
       windup: {}
