--- a/config/proc/make.drupal.yml
+++ b/config/proc/make.drupal.yml
@@ -16,10 +16,17 @@ task:
     args: {}
     opt: {}
     settings:
-      appsetting.stack: ^drupal-11
+      # appsetting.stack: ^drupal-11
+      appsetting.stack: ^drupal
   do:
     # Lanza evento de inicio
     - event: 'origin startup'
+
+    # Establece variable que permite desplegar todo el "stack"
+    - call: var
+      args:
+        key: deploy_all_stack
+        value: true
 
     # Pregunta de control
     - call: ask
@@ -46,7 +53,7 @@ task:
             call: exec
             args:
               cd: (({origin}.appsetting.root))
-              cmd: sudo chmod 777 -R (({origin}.appsetting.service.www.root))
+              cmd: sudo chmod 777 -R (({origin}.appsetting.service.www.drupal.target))
           - label: Desplegando configuración
             call: dm.init
             args:
@@ -63,7 +70,7 @@ task:
 
     # Establece directorios de destino drupal
     - loop:
-        - (({origin}.appsetting.root))/(({origin}.appsetting.service.www.root))/recommended-project
+        - (({origin}.appsetting.root))/(({origin}.appsetting.service.www.drupal.target))/recommended-project
       do:
         - label: Creando directorio (())
           call: exec
@@ -89,7 +96,7 @@ task:
       call: exec
       args:
         cd: (({origin}.appsetting.root))
-        cmd: cp -r (({origin}.appsetting.service.www.root))/recommended-project/. (({origin}.appsetting.service.www.root))/ && rm -r (({origin}.appsetting.service.www.root))/recommended-project
+        cmd: cp -r (({origin}.appsetting.service.www.drupal.target))/recommended-project/. (({origin}.appsetting.service.www.drupal.target))/ && rm -r (({origin}.appsetting.service.www.drupal.target))/recommended-project
     
     # Establece dependencias
     - check:
@@ -137,6 +144,13 @@ task:
       args:
         cd: (({origin}.appsetting.root))
         cmd: (({}.exec)) dm.drush -y site:install --site-name=(({origin}._name)) --account-name=admin --account-pass=(({}.var.password))
+
+    # Exporta configuración
+    - label: Exportando configuración
+      call: exec
+      args:
+        cd: (({origin}.appsetting.root))
+        cmd: (({}.exec)) dm.drush cex
         
     # Configura Drupal
     - check:
@@ -160,21 +174,21 @@ task:
       call: exec
       args:
         cd: (({origin}.appsetting.root))
-        # cmd: chown -R $(id -u):$(id -g) (({origin}.appsetting.service.www.root))/
-        cmd: sudo chown -R $(id -u):www-data (({origin}.appsetting.service.www.root))/web
+        # cmd: chown -R $(id -u):$(id -g) (({origin}.appsetting.service.www.drupal.target))/
+        cmd: sudo chown -R $(id -u):www-data (({origin}.appsetting.service.www.drupal.target))/web
 
     # Establece permisos
     - label: Estableciendo propietario y permisos para "web"
       call: exec
       args:
         cd: (({origin}.appsetting.root))
-        cmd: sudo chmod -R g+w (({origin}.appsetting.service.www.root))/web
+        cmd: sudo chmod -R g+w (({origin}.appsetting.service.www.drupal.target))/web
 
     - label: Estableciendo propietario y permisos para "private"
       call: exec
       args:
         cd: (({origin}.appsetting.root))
-        cmd: sudo chmod 777 (({origin}.appsetting.service.www.root))/private
+        cmd: sudo chmod 777 (({origin}.appsetting.service.www.drupal.target))/private
     
     # Obtiene acceso a sitio web
     - label: Obteniendo acceso a sitio web
