--- a/file/stack/drupal/.dm/docker-compose.common.local.yml
+++ b/file/stack/drupal/.dm/docker-compose.common.local.yml
@@ -51,13 +51,32 @@ services:
     restart: unless-stopped
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_pma.rule=Host(`${APPSETTING_SERVICE_PMA_HOST}`)"
+      - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_pma.rule=Host(`${APPSETTING_SERVICE_PMA_HOST_UI}`)"
       - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_pma.tls=true"
     networks:
       - dm_proxy
     depends_on:
       - db
- 
+
+  mailhog:
+    container_name: ${COMPOSE_PROJECT_NAME}-mailhog
+    build:
+      context: .
+      dockerfile: ./dockerfile/Dockerfile.mailhog
+      args:
+        APPSETTING_SERVICE_MAILHOG_BASE_IMAGE: ${APPSETTING_SERVICE_MAILHOG_BASE_IMAGE}
+    restart: unless-stopped
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_mailhog.tls=true"
+      - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_mailhog.rule=Host(`${APPSETTING_SERVICE_MAILHOG_HOST_UI}`)"
+      # SMTP Server
+      - "traefik.http.services.${COMPOSE_PROJECT_NAME}_mailhog.loadbalancer.server.port=1025"
+      # Web UI
+      - "traefik.http.services.${COMPOSE_PROJECT_NAME}_mailhog.loadbalancer.server.port=8025"
+    networks:
+      - dm_proxy
+
   www:
     container_name: ${COMPOSE_PROJECT_NAME}-www
     hostname: ${COMPOSE_PROJECT_NAME}-www
@@ -93,7 +112,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_www.tls=true"
-      - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_www.rule=Host(`${APPSETTING_SERVICE_WWW_HOST}`)"
+      - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_www.rule=Host(`${APPSETTING_SERVICE_WWW_HOST_UI}`)"
       - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_www.entrypoints=websecure"
       - "traefik.http.services.${COMPOSE_PROJECT_NAME}_www.loadbalancer.server.port=443"
       - "traefik.http.services.${COMPOSE_PROJECT_NAME}_www.loadbalancer.server.port=80"
