--- a/file/stack/drupal/.dm/dockerfile/Dockerfile.www
+++ b/file/stack/drupal/.dm/dockerfile/Dockerfile.www
@@ -28,6 +28,7 @@ RUN apt-get install -y net-tools
 RUN apt-get install -y git
 RUN apt-get install -y zip unzip
 RUN apt-get install -y mysql-client
+RUN apt-get install -y swaks
 
 # php:
 RUN LC_ALL=C.UTF-8 add-apt-repository -y ppa:ondrej/php
