Changes from init and mkcert

--- a/config/@/proxy/proxy.local.yml
+++ b/config/@/proxy/proxy.local.yml
@@ -18,8 +18,6 @@ hook:
     dm.init:
       startup: {}
       windup: {}
-      #
-      # issue: problema al usar certificados generados en docker y usarlos en el navegador del host
-      #
+      # Problema al usar certificados generados en docker y usarlos en el navegador del host
       # windup:
       #   - { call: dm.makeCerts }
