--- a/config/proc/proxy.up.yml
+++ b/config/proc/proxy.up.yml
@@ -10,13 +10,14 @@
 # ```console
 # cd ~/project/apps/way.code/app/custom/app/dm
 # make cert && \
+# way core.init && \
 # way proxy.up -v && \
 # way @dm.test.drupal.local up -v
 # ```
 # 3. Modifica /etc/hosts local
 # :RECIPE
 
-help: "Levanta servicios"
+help: "Levanta proxy"
 example:
  - (({}.tmp.proc.sig))
 
@@ -24,6 +25,5 @@ task:
   require: { }
   do:
     - { event: 'origin startup' }
-    - { call: exec, args: { cmd: "(({}.exec)) @dm.proxy.local dm.init -vf" }}
-    - { call: exec, args: { cmd: "(({}.exec)) @dm.proxy.local dm.up -v" }}
+    - { call: exec, args: { cmd: "(({}.exec)) @dm.proxy.local dm.up (({}.optSig))" }}
     - { event: 'origin windup' }
