Changes from proc

--- a/config/proc/proxy.up.yml
+++ b/config/proc/proxy.up.yml
@@ -1,4 +1,4 @@
-# RECIPE:Levanta proxy:
+# RECIPE:Levantar proxy:
 # ```console
 # way dm.proxy.up -v
 # ```
@@ -11,7 +11,6 @@
 # cd ~/project/apps/way.code/app/custom/app/dm
 # make cert && \
 # way core.init && \
-# way proxy.up -v && \
 # way @dm.test.drupal.local up -v
 # ```
 # 3. Modifica /etc/hosts local
