--- a/config/proc/db.import.yml
+++ b/config/proc/db.import.yml
@@ -1,7 +1,8 @@
 help: Importa base de datos
 example:
 - (({}.tmp.proc.sig))
-- (({}.tmp.proc.sig)) --last --force
+- (({}.tmp.proc.sig)) --last --truncate
+- (({}.tmp.proc.sig)) --truncate --file @dm.test.drupal.local---dm_test_drupal---2025-02-25---02:30:00.sql.gz
 
 task:
   require:
@@ -11,141 +12,23 @@ task:
       last:
         type: Boolean
         default: false
-      force:
+      file:
+        type: String
+        default: 
+      truncate:
         type: Boolean
         default: false
   do:
     - { event: 'origin startup' }
-
-    - call: log
+    -
+      call: dm.makeDbImport
       args:
-        message: "TODO!"
-        type: warning
-
-    - call: exit
-
-#    # Establece el ejecutable a partir de la imagen
-#    -
-#      call: dm.setExecDbService
-#      args:
-#        base_image: (({origin}.appsetting.service.db.base_image))
-#    # Comprueba si está establecida opción "--last"
-#    - 
-#      check:
-#        data:
-#          -
-#            key: (({}.opt.last))
-#            is: equal
-#            value: true
-#        # Obtiene última base de datos
-#        true:
-#          -
-#            call: exec
-#            args:
-#              cmd: find (({origin}.appsetting.path.backup_db)) -name "*.sql*" -printf "%T+ %p\n" | sort -nr | awk -F/ "{ print \$NF }" | head -1
-#              pipe: filename
-#        # Obtiene todos los ficheros de base de datos
-#        false:
-#          -
-#            call: exec
-#            args:
-#              cmd: find (({origin}.appsetting.path.backup_db)) -name "*.sql*" -printf "%T+ %p\n" | sort -nr | awk -F/ "{ print \$NF }"
-#              cast: true
-#              pipe: databases
-#          -
-#            call: complete
-#            args:
-#              choices: (({}.var.databases))
-#              pipe: filename
-#    # Comprueba que hay bases de datos para importar
-#    - 
-#      check:
-#        data:
-#          -
-#            key: (({}.var.filename))
-#            is: decoded
-#        false:
-#          - 
-#            call: log
-#            args:
-#              message: "No se han encontrado bases de datos (.sql|.sql.gz) para importar ficheros desde \"(({origin}.appsetting.path.backup_db))\"" 
-#              type: warning
-#          - 
-#            call: exit
-#    # Vacia tablas de la base de datos si detecta opción "--force"
-#    - 
-#      check:
-#        data:
-#          -
-#            key: (({}.opt.force))
-#            is: equal
-#            value: true
-#        true:
-#          -
-#            label: "Obteniendo tablas de base de datos: (({origin}.appsetting.service.db.name))"
-#            call: exec
-#            args:
-#              cmd: docker exec -i (({origin}.appsetting.tag))-db (({}.var.service_db_exec)) -B -e "use (({origin}.appsetting.service.db.name)); show tables" | sed -e "s/^Tables.*//" | xargs -n1
-#              out: false
-#              cast: true
-#              pipe: tables
-#          -
-#            loop: (({}.var.tables))
-#            do:
-#              -
-#                label: "Vaciando tabla: (({origin}.appsetting.service.db.name)).(())"
-#                call: exec
-#                args:
-#                  cmd: docker exec -i (({origin}.appsetting.tag))-db (({}.var.service_db_exec)) -e "truncate table (())" (({origin}.appsetting.service.db.name))
-#                  out: false
-#    # Comprueba el tipo de fichero
-#    - 
-#      check:
-#        data:
-#          -
-#            key: (({}.var.filename))
-#            is: RegExp
-#            value: "gz$"
-#        true:
-#          # Importa base de datos
-#          -
-#            label: "Descomprimiendo base de datos"
-#            call: exec
-#            args:
-#              cmd: gzip -c -d (({origin}.appsetting.path.backup_db))/(({}.var.filename)) > (({origin}.appsetting.path.backup_db))/(({}.var.filename)).sql
-#              out: true
-#          # Importa base de datos
-#          -
-#            label: "Importando base de datos"
-#            call: exec
-#            args:
-#              cmd: docker exec -i (({origin}.appsetting.tag))-db (({}.var.service_db_exec)) --one-database (({origin}.appsetting.service.db.name)) < (({origin}.appsetting.path.backup_db))/(({}.var.filename)).sql
-#              out: true
-#          # Elimina base de datos
-#          -
-#            label: "Eliminando fichero .sql"
-#            call: exec
-#            args:
-#              cmd: rm (({origin}.appsetting.path.backup_db))/(({}.var.filename)).sql
-#              out: true
-#        false:
-#          # Importa base de datos
-#          -
-#            label: "Importando base de datos"
-#            call: exec
-#            args:
-#              cmd: docker exec -i (({origin}.appsetting.tag))-db (({}.var.service_db_exec)) --one-database (({origin}.appsetting.service.db.name)) < (({origin}.appsetting.path.backup_db))/(({}.var.filename))
-#              out: true
-#          # Elimina base de datos
-#          -
-#            label: "Eliminando fichero .sql"
-#            call: exec
-#            args:
-#              cmd: rm (({origin}.appsetting.path.backup_db))/(({}.var.filename))
-#              out: true
-#    -
-#      call: log
-#      args:
-#        message: Base de datos importada
-#        type: success
-#    - { event: 'origin windup' }
+        from_service: (({origin}._tag))-db
+        base_image: (({origin}.appsetting.service.db.base_image))
+        host: (({origin}.appsetting.service.db.host.sv))
+        name: (({origin}.appsetting.service.db.name))
+        user: (({origin}.appsetting.service.db.user))
+        pass: (({origin}.appsetting.service.db.pass))
+        backup_db_path: (({origin}.appsetting.path.backup_db))
+        file: (({}.opt.file))
+    - { event: 'origin windup' }
