--- a/config/proc/db.import.yml
+++ b/config/proc/db.import.yml
@@ -7,7 +7,7 @@ example:
 task:
   require:
     config:
-      - .*(\.local) origin
+      - .*(\.local|\.dev|\.test|\.pre) origin
     opt:
       last:
         type: Boolean
