Exclude free access db (fix remote db export)

--- a/file/stack/drupal/.dm/templates/my.cnf
+++ b/file/stack/drupal/.dm/templates/my.cnf
@@ -1,6 +1,6 @@
-[client]
-user=((appsetting.service.db.user))
-password=((appsetting.service.db.pass))
+# [client]
+# user=((appsetting.service.db.user))
+# password=((appsetting.service.db.pass))
 
 [mysqld]
 collation-server = utf8_unicode_ci
