--- a/config/proc/db.ls.conf.yml
+++ b/config/proc/db.ls.conf.yml
@@ -16,6 +16,6 @@ task:
       call: exec
       args:
         message: ""
-        cmd: docker exec -i (({origin}.appsetting.tag))-db (({}.var.db_exec)) -B -e "SHOW variables"
+        cmd: docker exec -i -e MYSQL_PWD=(({origin}.appsetting.service.db.pass)) (({origin}.appsetting.tag))-db (({}.var.db_exec)) -h (({origin}.appsetting.service.db.host.sv)) -u (({origin}.appsetting.service.db.user)) -B -e "SHOW variables"
         out: true
     - { event: 'origin windup' }
