--- a/config/proc/db.make.database.yml
+++ b/config/proc/db.make.database.yml
@@ -10,7 +10,7 @@ task:
   do:
     - { event: 'origin startup' }
     -
-      call: dm.makeDbAccess
+      call: dm.makeDbMakeDatabase
       args:
         from_service: (({origin}._tag))-db
         base_image: (({origin}.appsetting.service.db.base_image))
@@ -18,4 +18,6 @@ task:
         name: (({origin}.appsetting.service.db.name))
         user: (({origin}.appsetting.service.db.user))
         pass: (({origin}.appsetting.service.db.pass))
+        charset: (({origin}.appsetting.service.db.charset))
+        collation: (({origin}.appsetting.service.db.collation))
     - { event: 'origin windup' }
