--- a/config/proc/run.yml
+++ b/config/proc/run.yml
@@ -15,6 +15,6 @@ task:
   do:
     - { event: 'origin startup' }
     - { call: dm.loadRunEnv }
-    - { call: exec, args: { cmd: "(({}.var.env)); [ -f (({origin}.appsetting.root))/.dm/custom/run/(({}.args.run)) ] && (({origin}.appsetting.root))/.dm/custom/run/(({}.args.run))", out: true } }
+    - { call: exec, args: { cmd: "(({}.var.env)); [ -f (({origin}.appsetting.root))/.dm/custom/run/(({}.args.run)) ] && (({origin}.appsetting.root))/.dm/custom/run/(({}.args.run)) (({}.args._))", out: true } }
     - { event: 'origin windup' }
 
