--- a/file/stack/drupal/.dm/dockerfile/Dockerfile.www
+++ b/file/stack/drupal/.dm/dockerfile/Dockerfile.www
@@ -27,6 +27,8 @@ RUN apt-get install -y git
 RUN apt-get install -y zip unzip
 RUN apt-get install -y mysql-client
 RUN apt-get install -y swaks
+RUN apt-get install -y sshpass
+RUN apt-get install -y rsync
 
 # php:
 RUN LC_ALL=C.UTF-8 add-apt-repository -y ppa:ondrej/php
