--- a/config/proc/db.ls.users.yml
+++ b/config/proc/db.ls.users.yml
@@ -5,7 +5,7 @@ example:
 task:
   require:
     config:
-      - .*(\.local) origin
+      - .*(\.local|\.pre) origin
   do:
     - { event: 'origin startup' }
     -
