db.access leap_from

--- a/config/interface.yml
+++ b/config/interface.yml
@@ -26,6 +26,10 @@ dm:
   makeDbAccess:
     collection: false
     args:
+      leap_from:
+        required: false
+        type: Object
+        defaultValue: {}
       from_service:
         required: true
         type: String
