--- a/file/stack/drupal/.dm/custom/dockerfile/example/Dockerfile.memcached
+++ b/file/stack/drupal/.dm/custom/dockerfile/example/Dockerfile.memcached
@@ -1,4 +1,9 @@
 ARG APPSETTING_SERVICE_MEMCACHED_BASE_IMAGE
 FROM $APPSETTING_SERVICE_MEMCACHED_BASE_IMAGE
 
+# packages:
+RUN apt-get update
+RUN apt-get install netcat-openbsd
+
+# user:
 ADD ../templates/bashrc /root/.bashrc
