--- a/config/proc/trace.error.yml
+++ b/config/proc/trace.error.yml
@@ -5,10 +5,13 @@ example:
 task:
   require:
     config:
-      - .*(\.local) origin
+      - .*(\.local|\.dev|\.test|\.pre) origin
   do:
+    - { event: 'origin startup' }
     -
       call: exec
       args:
-        cmd: docker exec -it (({origin}.appsetting.tag))-www tail -f /var/log/(({origin}.appsetting.service.www.webserver))/error.log
+        cmd: (({}.exec)) (({origin}._config_name)) exec sudo tail -f /var/log/(({origin}.appsetting.service.www.webserver))/error.log
         out: true
+    - { event: 'origin windup' }
+    
