--- a/config/proc/service.exec.yml
+++ b/config/proc/service.exec.yml
@@ -11,9 +11,11 @@ task:
     args:
       service:
         type: String
+        required: true
         default: (({origin}.appsetting.service))
       command:
         type: .*
+        required: false
         default: /bin/bash
     opt:
       user:
