--- a/file/stack/drupal/.dm/templates/php.ini.conf
+++ b/file/stack/drupal/.dm/templates/php.ini.conf
@@ -5,8 +5,9 @@
 # xdebug.start_with_request=yes
 error_reporting = E_COMPILE_ERROR|E_RECOVERABLE_ERROR|E_ERROR|E_CORE_ERROR
 display_errors = Off
-extension=zip
 memory_limit = 2G
 upload_max_filesize = 16M
 post_max_size = 16M
 max_input_vars = 3000
+extension=zip
+extension=apcu
