--- a/config/proc/exec.yml
+++ b/config/proc/exec.yml
@@ -31,7 +31,7 @@ task:
           -
             call: exec
             args:
-              cmd: (({}.exec)) (({origin}._config_name)) service.exec www (({}.args.command))
+              cmd: (({}.exec)) (({origin}._config_name)) (({}.optSig)) service.exec www (({}.args.command))
               out: true
         false:
           -
