Changes from run and sh

--- a/config/interface.yml
+++ b/config/interface.yml
@@ -1,7 +1,8 @@
 dm:
   checkEnvDbSync:
-  getRunCommands:
   getEnvKeys:
+  getHookEventKeys:
+  getCustomScriptNames:
   init:
     collection: false
     args:
