--- a/file/stack/drupal/.dm/templates/webserver.apache2.default.conf
+++ b/file/stack/drupal/.dm/templates/webserver.apache2.default.conf
@@ -35,6 +35,8 @@
     Require all granted
   </Directory>
 
-</VirtualHost>
+  <FilesMatch \.php$>
+    SetHandler "proxy:unix:/run/php/php((appsetting.service.www.php.release))-fpm.sock|fcgi://localhost"
+  </FilesMatch>
 
-# vim: syntax=apache ts=4 sw=4 sts=4 sr noet
+</VirtualHost>
