--- a/file/stack/drupal/.dm/dockerfile/Dockerfile.pma
+++ b/file/stack/drupal/.dm/dockerfile/Dockerfile.pma
@@ -2,3 +2,5 @@ ARG APPSETTING_SERVICE_PMA_BASE_IMAGE
 FROM $APPSETTING_SERVICE_PMA_BASE_IMAGE
 
 ADD ../templates/bashrc /root/.bashrc
+
+(({}.var.extra_commands))
